<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pointsBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/voortgang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pointsBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="239dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:progress="30"
        android:progressTint="#00BCD4"
        app:layout_constraintStart_toStartOf="@+id/pointsBarText"
        app:layout_constraintTop_toBottomOf="@+id/pointsBarText" />

    <TextView
        android:id="@+id/goToText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ga_naar"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/activeSprookje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/activesprookje"
        app:layout_constraintStart_toEndOf="@+id/goToText"
        app:layout_constraintTop_toTopOf="@+id/goToText" />

    <ImageView
        android:id="@+id/throphyImage"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/throphyimage"
        app:layout_constraintStart_toEndOf="@+id/pointsBar"
        app:layout_constraintTop_toTopOf="@+id/pointsBar"
        app:srcCompat="@drawable/throphy"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="415dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointsBar"
        app:srcCompat="@drawable/essteling_plattegrond_b1" />

</android.support.constraint.ConstraintLayout>